# array-tools

./: .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  appveyor.yml
examples/: array_from_iterator.rs  by_value_array_iterator.rs
src/: lib.rs
tests/: deprecated_compat.rs
