[package]
name = "array-tools"
version = "0.2.5"
authors = ["Mikhail \"L117\" Nikolenko <l117@l117.xyz>"]
edition = "2018"
description = "A little collection of array-related utils aiming to make life easier. "
homepage = "https://github.com/L117/array-tools"
repository = "https://github.com/L117/array-tools"
license = "Apache-2.0 OR MIT"
keywords = ["array", "no_std"]
categories = ["no-std"]
exclude = ["/.travis.yml", ".gitignore"]

[badges]
travis-ci = { repository = "L117/array-tools", branch = "master" }
is-it-maintained-issue-resolution = { repository = "L117/array-tools" }
is-it-maintained-open-issues = { repository = "L117/array-tools" }
maintenance = { status = "experimental" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
